2007-03-13  dima  <dima.exe@gmail.com>

	* rails-for-model.el: create

	* rails-for-unit-test.el: create

	* rails-core.el (rails-core:buffer-type): support lambda expression in rails-directory<-->types

	* rails-scripts.el (rails-rake): ask to save modified buffers before run rake test:*

2007-02-02  dima  <dima.exe@gmail.com>

	* rails-snippets.el (rails-snippets-menu-list): bug #8381 (bag "ff" snippet)

2007-01-30  dima  <dima.exe@gmail.com>

	* rails-snippets.el: create and place into it all snippets code

	* rails-ui.el: drop snippets declaration, make separate menu "Snippets"

2007-01-29  dima  <dima.exe@gmail.com>

	* rails-lib.el: create function compile-snippet and create-snippets-and-menumap-from-dsl

	* rails-ui.el (ruby-mode-abbrev-table): add mai snippet (add_index in migrations)

	* rails.el (rails-db-parameters): patch #8232 (by Ronaldo Ferraz)
	Console is not starting because env is not quoted in the function
	call, resulting in a Ruby error

	* rails-ws.el, rails-wi.el: patch #8233 (by Ronaldo Ferraz) Fixes
	a couple of UI messages and allows web server selection auto-save

2007-01-28  dima  <dima.exe@gmail.com>

	* *.el: fix bytecompile warnings
	
	* rails-core.el: remove dublicate of fucntion rails-core:helper-file

	* rails-navigation.el: patch #8228

	* rails.el (ruby-mode-hook): remove variables tab-width and indent-tabs

	* rails-ws.el: make variable  rails-ws:default-server-type are customized (to fix #8223)

	* rails-lib.el: add cross declaration indent-or-complete (to fix #8221)

2007-01-27  dima  <dima.exe@gmail.com>

	* rails-for-controller.el (rails-controller:switch-with-menu):
	call rails-controller:switch-to-view for "Current view" 

	* rails-log.el (rails-log:open-file): run rails-minor-mode in log buffer

	* rails-ui.el: update "Open log" menu

	* rails.el: relete function rails-open-log, and place all log
	related fuction to rails-log.el

	* rails-log.el: create

	* rails-lib.el (apply-colorize-to-buffer): create
